--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.organization=ge02-github
+sonar.organization=ge02
 sonar.projectKey=ge02_HW08
 
-
-
+# relative paths to directories. More details and properties are described
+# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
 sonar.sources=.
